Java9 support (#47)